# msys-shared-deps

./: README.md  pyproject.toml  release.ps1  release.py
.github/workflows/: release.yml
