[project]
name = "msys-shared-deps"
version = "0.1.14"
description = "Shared Python dependencies for MSYS internal use"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3,<3.0.0",
    "cryptography>=45.0.3,<46.0.0",
    "openpyxl (>=3.1.5,<4.0.0)",
    "box-sdk-gen (>=1.14.0,<2.0.0)"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "msys-shared-deps"
version = "0.1.14"
description = "Shared Python dependencies for MSYS internal use"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
cryptography = "^45.0.3"
openpyxl = "^3.1.5"
box-sdk-gen = "^1.14.0"

[tool.poetry.group.dev.dependencies]
# 開発用依存関係はここに追加

[tool.poetry.scripts]
release = "release:main"
